# ledgerproof-eu

./: .gitignore  CLAUDE.md  CRIT_PATH.md  EU-SPRINT-STATUS.md  FASTEST-ADOPTERS-INTELLIGENCE.md  HOW-LEDGERPROOF-HANDLES-DEEPFAKES.md  LAUNCH-MANIFEST.md  PLAN.md  SPRINT-JUN-3-2026-EU-PIVOT-SUMMARY.md  WHAT-LEDGERPROOF-EU-DOES.md  lpr-status.json  ops-state.json  win-conditions.json
10-gtm-code/: README.md  pyproject.toml
10-gtm-code/examples/: seed_accounts.csv
10-gtm-code/gtm/: __init__.py  anchoring.py  artifacts.py  brand.py  cli.py  personas.py  rendering.py  sequences.py  tracking.py
10-gtm-code/gtm/templates/emails/: cro_cco.md.j2  gc.md.j2  mlops.md.j2
10-gtm-code/gtm/templates/one_pagers/: shadow_ai_inventory.md.j2
10-gtm-code/tests/: conftest.py  test_anchoring.py  test_brand.py  test_rendering.py  test_sequences.py  test_tracking.py
15-protocol-distribution/adapters/ai21-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/ai21-python/ai21_ledgerproof/: __init__.py  client_wrapper.py  emitter.py  schema.py
15-protocol-distribution/adapters/ai21-python/examples/: 01_jamba_quickstart.py  02_long_context.py  03_streaming.py
15-protocol-distribution/adapters/ai21-python/ledgerproof_ai21/: async_client_wrapper.py  canonical.py  client_wrapper.py  decorator.py  emitter.py  manual.py
15-protocol-distribution/adapters/ai21-python/tests/: test_canonical.py  test_client_wrapper.py  test_emitter.py  test_manual.py  test_schema.py  test_signer.py
15-protocol-distribution/adapters/aleph-alpha-python/: LICENSE  README.md  pyproject.toml
15-protocol-distribution/adapters/aleph-alpha-python/aleph_alpha_ledgerproof/: async_client_wrapper.py  client_wrapper.py  decorator.py  manual.py  schema.py  signer.py
15-protocol-distribution/adapters/aleph-alpha-python/examples/: 01_completion_quickstart.py  02_on_prem_sovereign_deployment.py  03_luminous_models.py
15-protocol-distribution/adapters/aleph-alpha-python/ledgerproof_aleph_alpha/: __init__.py  canonical.py  emitter.py  version.py
15-protocol-distribution/adapters/aleph-alpha-python/tests/: test_client_wrappers.py  test_decorator_and_manual.py  test_schema.py  test_signer_and_canonical.py
15-protocol-distribution/adapters/azure-openai-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/azure-openai-python/azure_openai_ledgerproof/: __init__.py  async_client_wrapper.py  decorator.py  emitter.py  manual.py  signer.py
15-protocol-distribution/adapters/azure-openai-python/examples/: 01_azure_quickstart.py  02_azure_ad_auth.py  03_eu_region_deployment.py
15-protocol-distribution/adapters/azure-openai-python/ledgerproof_azure_openai/: client_wrapper.py  decorator.py  manual.py  schema.py
15-protocol-distribution/adapters/azure-openai-python/tests/: test_canonical.py  test_client_wrapper.py  test_emitter.py  test_manual.py  test_schema.py
15-protocol-distribution/adapters/bedrock-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/bedrock-python/bedrock_ledgerproof/: __init__.py  client_wrapper.py  decorator.py  emitter.py  schema.py  signer.py
15-protocol-distribution/adapters/bedrock-python/examples/: 01_bedrock_quickstart.py  02_converse_api.py  03_eu_region_residency.py
15-protocol-distribution/adapters/bedrock-python/ledgerproof_bedrock/: __init__.py  canonical.py  converse_wrapper.py  emitter.py  manual.py  version.py
15-protocol-distribution/adapters/bedrock-python/tests/: test_canonical.py  test_client_wrapper.py  test_emitter.py  test_manual.py  test_schema.py  test_signer.py
15-protocol-distribution/adapters/fireworks-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/fireworks-python/examples/: 01_fireworks_quickstart.py  02_flux_image_with_provenance.py  03_function_calling.py
15-protocol-distribution/adapters/fireworks-python/fireworks_ledgerproof/: async_client_wrapper.py  client_wrapper.py  decorator.py  emitter.py  image_wrapper.py  schema.py
15-protocol-distribution/adapters/fireworks-python/ledgerproof_fireworks/: __init__.py  canonical.py  client_wrapper.py  emitter.py  image_wrapper.py  manual.py
15-protocol-distribution/adapters/fireworks-python/tests/: test_canonical.py  test_client_wrapper.py  test_emitter.py  test_image_wrapper.py  test_manual_and_decorator.py  test_schema.py
15-protocol-distribution/adapters/haystack-python/: LICENSE  README.md  pyproject.toml
15-protocol-distribution/adapters/haystack-python/examples/: 01_rag_pipeline_quickstart.py  02_german_enterprise_rag.py  03_editorial_pipeline.py
15-protocol-distribution/adapters/haystack-python/haystack_ledgerproof/: __init__.py  callbacks.py  canonical.py  emitter.py  schema.py  wrappers.py
15-protocol-distribution/adapters/huggingface-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/langchain-python/: LICENSE  README.md  pyproject.toml
15-protocol-distribution/adapters/llamaindex-python/: LICENSE  README.md  pyproject.toml
15-protocol-distribution/adapters/mistral-python/: LICENSE  README.md  pyproject.toml
15-protocol-distribution/adapters/perplexity-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/qwen-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/replicate-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/semantic-kernel-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/snowflake-cortex-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/together-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/vertexai-python/: LICENSE  README.md  pyproject.toml
15-protocol-distribution/adapters/voyage-python/: README.md  pyproject.toml
15-protocol-distribution/adapters/watsonx-python/: README.md  pyproject.toml
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python-langchain/: README.md  pyproject.toml
sdks/python/examples/: 01_minimal.py
sdks/python/tests/: conftest.py  test_canonical.py  test_gdpr.py  test_keys.py  test_live_publish.py
(+795 files in other folders)
