[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ledgerproof"
version = "1.0.0"
description = "EU AI Act Article 50 cryptographic transparency receipts, anchored to Bitcoin. The Stripe-style SDK: pip install, three lines, you're compliant."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Veronica S. Dawkins", email = "veronica@ledgerproofhq.io" }]
keywords = [
  "ai", "compliance", "eu-ai-act", "article-50", "provenance",
  "bitcoin", "transparency", "deepfake", "gdpr", "cryptographic-receipt",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security :: Cryptography",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
  "cryptography>=42",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
google = ["google-generativeai>=0.5"]
mistral = ["mistralai>=0.1"]
langchain = ["langchain-core>=0.1"]
perceptual = ["imagehash>=4.3", "Pillow>=10.0"]
all = [
  "openai>=1.0",
  "anthropic>=0.20",
  "google-generativeai>=0.5",
  "mistralai>=0.1",
  "langchain-core>=0.1",
  "imagehash>=4.3",
  "Pillow>=10.0",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "respx>=0.21",
  "hypothesis>=6.92",
  "mypy>=1.8",
  "ruff>=0.1.13",
]

[project.urls]
Homepage = "https://ledgerproofhq.io"
Documentation = "https://docs.ledgerproofhq.io/sdks/python"
Repository = "https://github.com/vsdawkins-creator/ledgerproof-python"
Issues = "https://github.com/vsdawkins-creator/ledgerproof-python/issues"
Changelog = "https://github.com/vsdawkins-creator/ledgerproof-python/blob/main/CHANGELOG.md"
"EU AI Act Article 50" = "https://artificialintelligenceact.eu/article/50/"
"LPR Specification" = "https://github.com/vsdawkins-creator/ledgerproof-eu/blob/main/04-lpr-spec/LPR-1.1-SPECIFICATION.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgerproof"]

[tool.hatch.build.targets.sdist]
include = ["src/ledgerproof", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle, pyflakes
  "I",                  # isort
  "B",                  # flake8-bugbear
  "UP",                 # pyupgrade
  "C4",                 # flake8-comprehensions
  "SIM",                # flake8-simplify
  "RUF",                # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False in tests is fine

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_explicit = false   # we DO need Any at JSON boundaries
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config -q"
testpaths = ["tests"]
markers = [
  "live: live integration tests against api-eu.ledgerproofhq.io (requires LEDGERPROOF_LIVE_API_KEY)",
  "openai: tests requiring the openai package and OPENAI_API_KEY",
  "anthropic: tests requiring the anthropic package and ANTHROPIC_API_KEY",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/ledgerproof"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
