[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-alpha-ledgerproof"
version = "0.1.0"
description = "LedgerProof side-channel adapter for the Aleph Alpha Python SDK (EU AI Act Article 50 transparency receipts)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "LedgerProof Foundation", email = "foundation@ledgerproof.org" }
]
keywords = [
    "ledgerproof",
    "aleph-alpha",
    "luminous",
    "eu-ai-act",
    "article-50",
    "transparency",
    "ai-sovereignty",
    "gdpr",
    "bafin",
    "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aleph-alpha-client>=10.0",
    "cryptography>=41",
    "cbor2>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://ledgerproof.org"
Documentation = "https://docs.ledgerproof.org/adapters/aleph-alpha"
Source = "https://github.com/ledgerproof-foundation/ledgerproof-aleph-alpha-python"
Issues = "https://github.com/ledgerproof-foundation/ledgerproof-aleph-alpha-python/issues"

[tool.setuptools.packages.find]
include = ["aleph_alpha_ledgerproof*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
