[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-openai-ledgerproof"
version = "0.1.0"
description = "LedgerProof adapter for the Azure OpenAI Python SDK — emits Article 50 transparency receipts as a side channel."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "LedgerProof Foundation (in formation)" }
]
keywords = [
    "ledgerproof",
    "azure-openai",
    "azure",
    "eu-ai-act",
    "article-50",
    "transparency",
    "receipts",
    "gdpr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.40",
    "azure-identity>=1.15",
    "cryptography>=41",
    "cbor2>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]
keyvault = [
    "azure-keyvault-keys>=4.8",
]

[project.urls]
Homepage = "https://ledgerproof.org"
Repository = "https://github.com/ledgerproof/ledgerproof"
Documentation = "https://docs.ledgerproof.org"

[tool.setuptools.packages.find]
include = ["azure_openai_ledgerproof*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
