[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-ledgerproof"
version = "0.1.1"
description = "LedgerProof callback handler for LlamaIndex — Article 50 transparency receipts for RAG and agent workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "LedgerProof Foundation", email = "engineering@ledgerproof.org" },
]
keywords = [
    "llamaindex",
    "rag",
    "eu-ai-act",
    "article-50",
    "transparency",
    "compliance",
    "cryptography",
    "ed25519",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "llama-index-core>=0.11",
    "cryptography>=41",
    "cbor2>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
examples = [
    "llama-index>=0.11",
    "llama-index-embeddings-huggingface>=0.2",
]

[project.urls]
Homepage = "https://ledgerproof.org"
Documentation = "https://docs.ledgerproof.org/adapters/llamaindex"
Repository = "https://github.com/ledgerproof/protocol"
Issues = "https://github.com/ledgerproof/protocol/issues"

[tool.setuptools.packages.find]
include = ["llamaindex_ledgerproof*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
