[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-kernel-ledgerproof"
version = "0.1.0"
description = "LedgerProof adapter for Microsoft Semantic Kernel (Python). Emits EU AI Act Article 50 transparency receipts as a side channel."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "LedgerProof Foundation" }
]
keywords = ["semantic-kernel", "microsoft", "azure", "ai-act", "transparency", "receipts", "compliance", "ledgerproof"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41",
    "cbor2>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sk = ["semantic-kernel>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://ledgerproof.org"
Repository = "https://github.com/ledgerproof/protocol"
Documentation = "https://ledgerproof.org/docs"

[tool.setuptools.packages.find]
include = ["semantic_kernel_ledgerproof*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
