[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerproof-snowflake-cortex"
version = "0.1.0"
description = "LedgerProof adapter for Snowflake Cortex. Side-channel cryptographic transparency receipts for EU AI Act Article 50 obligations, with enterprise data-warehouse lineage attribution."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "LedgerProof Foundation", email = "foundation@ledgerproof.org" }
]
keywords = [
  "ledgerproof",
  "snowflake",
  "cortex",
  "eu-ai-act",
  "article-50",
  "transparency",
  "cryptographic-receipts",
  "compliance",
  "data-warehouse",
  "rag",
  "data-lineage",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Database",
]
dependencies = [
  "snowflake-snowpark-python>=1.20",
  "cryptography>=41",
  "cbor2>=5.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://ledgerproof.org"
Documentation = "https://docs.ledgerproof.org/adapters/snowflake-cortex-python"
Repository = "https://github.com/ledgerproof/ledgerproof"
Issues = "https://github.com/ledgerproof/ledgerproof/issues"

[tool.setuptools.packages.find]
include = ["ledgerproof_snowflake_cortex*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
