[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerproof-watsonx"
version = "0.1.0"
description = "LedgerProof adapter for the IBM watsonx.ai Python SDK. Side-channel transparency receipts for EU AI Act Article 50, with EU-DE data-residency and IBM Granite open-model attribution."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "LedgerProof Foundation (in formation)" }
]
keywords = [
    "ledgerproof",
    "ibm",
    "watsonx",
    "granite",
    "eu-ai-act",
    "article-50",
    "transparency",
    "receipts",
    "gdpr",
    "data-residency",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "ibm-watsonx-ai>=1.1",
    "cryptography>=41",
    "cbor2>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://ledgerproof.org"
Repository = "https://github.com/ledgerproof/ledgerproof"
Documentation = "https://docs.ledgerproof.org"

[tool.setuptools.packages.find]
include = ["ledgerproof_watsonx*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
